# airflow-fork

./: setup.cfg  setup.py
.github/provider-amazon/: setup.cfg  setup.py
.github/workflows/: pypi.yaml
airflow/: __init__.py
airflow/providers/amazon/: __init__.py  provider.yaml
airflow/providers/amazon/aws/log/: s3_task_handler.py
airflow/utils/log/: file_task_handler.py
docs/apache-airflow-providers-amazon/: commits.rst  index.rst
docs/docker-stack/: README.md  entrypoint.rst
docs/docker-stack/docker-examples/customizing/: own-requirements.sh
docs/docker-stack/docker-examples/extending/add-apt-packages/: Dockerfile
docs/docker-stack/docker-examples/extending/add-build-essential-extend/: Dockerfile
docs/docker-stack/docker-examples/extending/add-providers/: Dockerfile
docs/docker-stack/docker-examples/extending/add-pypi-packages/: Dockerfile
docs/docker-stack/docker-examples/extending/add-requirement-packages/: Dockerfile
docs/docker-stack/docker-examples/extending/custom-providers/: Dockerfile
docs/docker-stack/docker-examples/extending/embedding-dags/: Dockerfile
docs/docker-stack/docker-examples/extending/writable-directory/: Dockerfile
