[metadata]
name = pano-airflow-providers-amazon
summary = Provider for Apache Airflow. Implements apache-airflow-providers-amazon package
description = Provider package apache-airflow-providers-amazon for Apache Airflow
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Apache Software Foundation
author_email = dev@airflow.apache.org
url = https://airflow.apache.org/
download_url = https://archive.apache.org/dist/airflow/providers
license = Apache License 2.0
license_files = 
	LICENSE
	NOTICE
classifiers = 
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Environment :: Web Environment
	Intended Audience :: Developers
	Intended Audience :: System Administrators
	Framework :: Apache Airflow
	Framework :: Apache Airflow :: Provider
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: System :: Monitoring
project_urls = 
	Documentation=https://airflow.apache.org/docs/apache-airflow-providers-amazon/8.0.0/
	Bug Tracker=https://github.com/apache/airflow/issues
	Source Code=https://github.com/apache/airflow
	Slack Chat=https://s.apache.org/airflow-slack
	Twitter=https://twitter.com/ApacheAirflow
	YouTube=https://www.youtube.com/channel/UCSXwxpWZQ7XZ1WL3wqevChA/

[bdist_wheel]
python_tag = py3

[options]
zip_safe = False
include_package_data = True
python_requires = ~=3.7
packages = find:
setup_requires = 
	setuptools
	wheel
install_requires = 
	apache-airflow-providers-common-sql>=1.3.1
	apache-airflow>=2.3.0
	asgiref
	boto3>=1.24.0
	jsonpath_ng>=1.5.3
	mypy-boto3-appflow>=1.24.0
	mypy-boto3-rds>=1.24.0
	mypy-boto3-redshift-data>=1.24.0
	redshift_connector>=2.0.888
	sqlalchemy_redshift>=0.8.6
	watchtower~=2.0.1

[options.entry_points]
apache_airflow_provider = 
	provider_info=airflow.providers.amazon.get_provider_info:get_provider_info

[files]
packages = airflow.providers.amazon

[egg_info]
tag_build = 
tag_date = 0

